--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,41 @@
-h1{
-    color: palevioletred;
+/*Gerais*/
+body{
+    font-family: 'Roboto', sans-serif;
+}
+.row{
+    margin: 0;
+}
+.container{
+    padding: 70px 0;
+}
+p,li{
+    color: #444;
+    font-size: 14px;
+}
+/*Barra da Navegação*/
+header, .navbar{
+    background-color: #3f222f;
+}
+#nav-container{
+    padding-top: 0;
+    padding-bottom: 0;
+}
+#logo{
+    width: 75px;
+}
+.navbar-brand{
+    padding:0;
+    color: #fff;
+}
+.navbar-brand:hover{
+    color: #fff;
+}
+#navbar-links a{
+    color: #fff;
+}
+#navbar-links a:hover{
+    color: #ffb9d9;
+}
+.navbar-expand-lg, .navbar-nav, .navbar-link {
+    padding: 1rem 0.8rem;
 }
