--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,86 @@
 /*Gerais*/
-body{
-    font-family: 'Roboto', sans-serif;
+body {
+  font-family: "Roboto", sans-serif;
 }
-.row{
-    margin: 0;
+.row {
+  margin: 0;
 }
-.container{
-    padding: 70px 0;
+.container {
+  padding: 70px 0;
 }
-p,li{
-    color: #444;
-    font-size: 14px;
+p,
+li {
+  color: #444;
+  font-size: 14px;
 }
 /*Barra da Navegação*/
-header, .navbar{
+header,
+.navbar {
+  background-color: #3f222f;
+}
+#nav-container {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+#logo {
+  width: 75px;
+}
+.navbar-brand {
+  padding: 0;
+  color: #fff;
+}
+.navbar-brand:hover {
+  color: #fff;
+}
+#navbar-links a {
+  color: #fff;
+}
+#navbar-links a:hover {
+  color: #ffb9d9;
+}
+.navbar-expand-lg,
+.navbar-nav,
+.navbar-link {
+  padding: 1rem 0.8rem;
+}
+/*Slider*/
+.container-fluid {
+  padding: 0;
+}
+#mainSlider .carousel-inner,
+#mainSlider .carousel-item {
+  height: 90vh;
+}
+#mainSlider .carousel-caption {
+  top: 30%;
+}
+#mainSlider .carousel-caption h2 {
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+#mainSlider .carousel-caption p {
+  font-size: 22px;
+  font-weight: 300;
+  margin-bottom: 100px;
+  color: #fff;
+}
+.main-btn {
+  background-color: #3f222f;
+  color: #fff;
+  text-transform: uppercase;
+  width: 200px;
+  height: 60px;
+  padding: 10px 20px;
+  border-radius: 30px;
+  border: 3px solid transparent;
+  transition: 0.6s;
+}
+.main-btn:hover{
+    color: #3f222f;
+    text-decoration: none;
+    background-color: #fff;
+    border-color: #3f222f;
+}
+.carousel-indicators .active{
     background-color: #3f222f;
-}
-#nav-container{
-    padding-top: 0;
-    padding-bottom: 0;
-}
-#logo{
-    width: 75px;
-}
-.navbar-brand{
-    padding:0;
-    color: #fff;
-}
-.navbar-brand:hover{
-    color: #fff;
-}
-#navbar-links a{
-    color: #fff;
-}
-#navbar-links a:hover{
-    color: #ffb9d9;
-}
-.navbar-expand-lg, .navbar-nav, .navbar-link {
-    padding: 1rem 0.8rem;
 }
